--- a/ProjetoInterçaoEmHTML/DSVdeSIS/home.html
+++ b/ProjetoInterçaoEmHTML/DSVdeSIS/home.html
@@ -7,7 +7,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>home</title>
     <style type="text/css">
         body {
             background-color: #595561c7;
@@ -28,12 +28,13 @@
 <body>
 
     <h1 class="text-center"> Primatas</h1>
-
-
+<br>
+     <h3>  •<u>home - here</u>
     •<a href="att.html" title="tabela" alt="">Tabela</a>
-    •<a href="sobre.html" title="sobre" alt="" class="text-emphasis">Sobre mim!</a>
+    •<a href="sobre.html" title="sobre" alt="" class="text-emphasis">Sobre mim!</a> 
+    •<a href="objeto.html">Objeto</a></h3>
     <br>
-    <br>
+    
     <hr><br>
     <h3>Amigos ou primatas? MAP</h3>
 
@@ -43,7 +44,7 @@
 
         <a href="#comem" title="Seja direcionado" alt="">⧋ O que comem?</a> <br>
         <a href="#vestem" title="Seja direcionado" alt="">⧋ O que vestem?</a><br>
-        <a href="#vivem" title="Seja direcionado" alt="">⧋ Onde vivem?</a>⧋ Onde vivem? <br>
+        <a href="#vivem" title="Seja direcionado" alt="">⧋ Onde vivem?</a><br>
         <a href="#musica" title="Seja direcionado" alt="">⧋ E o principal, que musica escutam?</a> <br>
 
         <br>MAP = Meus amigos primatas!!
