--- a/ProjetoInterçaoEmHTML/DSVdeSIS/att.html
+++ b/ProjetoInterçaoEmHTML/DSVdeSIS/att.html
@@ -7,7 +7,22 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style type="text/css">
+        body {
+            background-color: #595561c7;
+            background-position-x: center;
+            margin-left: 20%;
+            margin-right: 20%;
+            border: 3px solid rgba(1, 32, 49, 0.904);
+            padding: 20px 20px 10px 10px;
+            font-family: sans-serif;
+        }
+
+        a {
+            color: rgb(0, 0, 0);
+        }
+    </style>
+    <title>tabela</title>
 
 </head>
 
@@ -20,7 +35,9 @@
                     TABELA INTERATIVA
                 </h1>
                 <br><br>•<a href="home.html" title="home" alt="">Home</a>
-                •<a href="sobre.html" title="sobre" alt="">Sobre mim!</a><br><br>
+                •<u>tabela - here</u>
+                •<a href="sobre.html" title="sobre" alt="">Sobre mim!</a>
+                •<a href="objeto.html">Objeto</a><br><br>
                 <div class="row">
                     <div class="col-md-8">
                         <table id="tabela" class="table" >
