--- a/ProjetoInterçaoEmHTML/DSVdeSIS/sobre.html
+++ b/ProjetoInterçaoEmHTML/DSVdeSIS/sobre.html
@@ -7,7 +7,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sobre mim!</title>
     <style type="text/css">
         body {
             background-color: #595561c7;
@@ -43,6 +43,8 @@
                 <h6 class="text-dark">
                 •<a href="home.html" title="home" alt="" class="text-emphasis">Home</a>
                 •<a href="att.html" title="tabela" alt="">Tabela</a>
+                •<u> sobre mim - here</u>
+                •<a href="objeto.html">Objeto</a>
                 
                 </h6>
                 <br>
